# pjproject-rs

./: .gitmodules  Cargo.toml
examples/: call.rs
examples/ws_call/: main.rs  sip.rs
pjproject-sys/: Cargo.toml  build.rs  wrapper.h
src/: error.rs  lib.rs  status.rs
src/pj/: errno.rs  ioqueue.rs  mod.rs  os.rs  pj_types.rs  pool.rs  rand.rs  sock.rs
src/pjmedia/: codec.rs  endpoint.rs  event_mgr.rs  master_port.rs  media_types.rs  mod.rs  port.rs  rtcp.rs  rtp.rs  sdp.rs  signatures.rs  stream.rs  transport.rs  wav_streamer.rs  wave.rs
src/pjsip/: mod.rs  sip_dialog.rs  sip_endpoint.rs  sip_event.rs  sip_module.rs  sip_transport copy.rs  sip_transport.rs  sip_transport_udp.rs  sip_types.rs  sip_ua_layer.rs
src/pjsip_ua/: mod.rs  sip_inv copy.rs  sip_inv.rs
