[package]
name = "pjproject-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ionosnetworks/pjproject-rs"
readme = "README.md"
license = "MIT"
description = "Rust wrapper for pjproject Library"
keywords = ["pjproject", "pjsip", "pjsua", "sip"]
categories = ["api-bindings"]
exclude = ["Cargo.lock"]

[workspace]
members = ["pjproject-sys"]

[features]
default = ["static"]
static = ["pjproject-sys/static"]

[dependencies]
bytes = "1"
itertools = "0.10"
parking_lot = "0.12"
pjproject-sys = { path = "pjproject-sys", version = "0.1.0", default-features = false }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
axum = { version = "0.5", features = ["headers", "ws", "original-uri"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
ctrlc = { version = "3", features = ["termination"] }
clap = { version = "3", features = ["cargo", "env"] }
flume = "0.10"
futures = "0.3"
once_cell = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["fs", "cors", "trace"] }
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "env-filter",
] }
tracing-log = "0.1"
